# incident-manager

./: .dockerignore  .env.default  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  scripts.py  tailwind.config.js
.docker/: entrypoint.sh
.github/workflows/: release.yml
incident_manager/: asgi.py  settings.py  urls.py  wsgi.py
incidents/: admin.py  forms.py  models.py  urls.py  views.py  widgets.py
incidents/migrations/: 0001_initial.py  0002_incident_status.py  0003_alter_incident_status.py  0004_incident_category.py  0005_incident_assigned_to.py  0006_comment.py  0007_incidentfile.py  0008_delete_incidentattachment.py  0009_alter_incident_details.py  0010_alter_incident_impact.py  0011_alter_incident_resolution_process.py
incidents/pkg_views/: incidents_dashboard.py  incidents_delete.py  incidents_detail.py  incidents_list.py  incidents_timeline.py  incidents_upsert.py  incidents_yearly_report.py  user_views.py
incidents/static/js/: components.js  toast.js
incidents/templates/: base.html
incidents/templates/components/: action_buttons.html  breadcrumbs.html  card_header.html  common_styles.html  data_table.html  empty_state.html  fade_in.html  filter_pill.html  modal.html  pagination.html  search_bar.html  severity_badge.html  stats_card.html  status_badge.html  toast.html
incidents/templates/incidents/: base.html  dashboard.html  incident_confirm_delete.html  incident_detail.html  incident_form.html  incident_list.html  incidents_confirm_delete.html  incidents_dashboard.html  incidents_detail.html  incidents_form.html  incidents_list.html  incidents_timeline.html  incidents_yearly_report.html  timeline.html  user_profile.html  yearly_report.html
incidents/templatetags/: __init__.py  file_tags.py  incident_extras.py  incident_tags.py  report_extras.py  table_extras.py
static/css/: global.css  icons.css  output.css
staticfiles/css/: fonts.css  global.css  output.css
templates/: 404.html  base.html
(+4 files in other folders)
