[project]
name = "incident_manager"
version = "0.1.3"
description = ""
authors = [
    {name = "mathieu",email = "mat@myframboise.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.6"
pillow = "10.2.0"
django-crispy-forms = "2.1.0"
crispy-bootstrap5 = "0.7"
whitenoise = "6.6.0"
python-dateutil = "2.8.2"
django-storages = "1.14.2"
gunicorn = "21.2.0"
django-environ = "0.11.2"
openpyxl = "3.1.5"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17"
pylint-django = "^2.5"
flake8 = "^6.0"
isort = "^5.12"
djlint = "^1.31"

[tool.isort]
profile = "django"
line_length = 88
multi_line_output = 3

[tool.poetry.scripts]
test = "scripts:tests"
lint = "scripts:lint"
dev  = "scripts:dev"
migrate = "scripts:migrate"
translate = "scripts:translate"
